--- a/Seminar/bibliography.bib
+++ b/Seminar/bibliography.bib
@@ -66,3 +66,12 @@ doi = {10.1108/IntR-05-2012-0095}
   year={2010},
   organization={ACM}
 }
+
+@inproceedings{p1previouswork,
+  title={Twitter Under Crisis: Can we trust what we RT?},
+  author={Mendoza, Marcelo and Poblete, Barbara and Castillo, Carlos},
+  booktitle={Proceedings of the first workshop on social media analytics},
+  pages={71--79},
+  year={2010},
+  organization={ACM}
+}
